Add debug Spark script